<resources>
    <string name="app_name">MovieViewer</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_rated_movies">Top rated movies</string>
    <string name="see_all">See all</string>
    <string name="movies">Movies</string>
    <string name="tv">TV</string>
    <string name="people">People</string>
    <string name="explore">Explore</string>
    <string name="popular_movies">Popular movies</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="popular_tv">Popular TV</string>
    <string name="top_rated_tv">Top rated TV</string>
    <string name="tv_on_the_air">TV on the air</string>
    <string name="filters">Filters</string>
    <string name="genres">Genres</string>
    <string name="min_rating">Min rating</string>
    <string name="min_release_year">Min release year</string>
    <string name="show_results">Show results</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="recommended_movies">Recommended Movies</string>
    <string name="actors">Actors</string>
    <string name="recommended_tv">Recommended TV</string>
    <string name="reviews">Reviews</string>
    <string name="biography">Biography</string>
    <string name="overview">Overview</string>
    <string name="search_movies">Search for movies</string>
    <string name="search_tv">Search fo TV</string>
    <string name="search_people">Search for people</string>
    <string name="trailer">Trailer</string>
    <string name="results">Results</string>
    <string name="profile">Profile</string>
    <string name="rate">Rate</string>
    <string name="discover">Discover</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="rated_movies">Rated movies</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="movie_watchlist">Movie watchlist</string>
    <string name="rated_tv">Rated TV</string>
    <string name="tv_watchlist">TV watchlist</string>
    <string name="favorite_tv">Favorite TV</string>
</resources>
