<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_movies"
        android:enabled="true"
        android:icon="@drawable/ic_movies"
        android:title="@string/movies"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_tv"
        android:enabled="true"
        android:icon="@drawable/ic_tv"
        android:title="@string/tv"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_people"
        android:enabled="true"
        android:icon="@drawable/ic_people"
        android:title="@string/people"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_explore"
        android:enabled="true"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore"
        app:showAsAction="always"/>


</menu>